fixed the spacing a little. probably so it doens't look absurdly weird.

--- a/css/extend-bootstrap.css
+++ b/css/extend-bootstrap.css
@@ -1,3 +1,3 @@
 .spacer_bottom {
-    padding-bottom: 100px; /* define margin as you see fit */
+    padding-bottom: 40px; /* define margin as you see fit */
 }
